--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;8 de abril de 2021 a las 3:43 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;8 de abril de 2021 a las 4:22 p. m.</p>
           
         </div>
       </div>
@@ -157,6 +157,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-116.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#375)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--b2be831fdd52bd8877fde3b44a87e78b -->April 7, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19 and updates on the state's pandemic response.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-115.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#374)</a>
