Update translation - 105791734 (#4049) bff62d317550b15af3c2cdb09b4ef7d61fa789a0

--- a/zh-hant/index.html
+++ b/zh-hant/index.html
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						作為正在持續更新的全州疫苗接種數據和完整性計劃的一部分，在2021年4月7日進行定期晨間數據更新後，大約有400,000劑疫苗被增加到數據中。這些劑量數代表提供者已更正的部分記錄數量，這些記錄未在2021年3月11日至2021年4月6日之間被計入數據。此數據的詳情在 <a class="hero-stats-footer-slink" href="/state-dashboard/">州一覽表</a>.
+						此數據的詳情在 <a class="hero-stats-footer-slink" href="/state-dashboard/">州一覽表</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
