--- a/ar/index.html
+++ b/ar/index.html
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						وكجزء من بيانات التطعيم الجارية على مستوى الولاية ومبادرة النزاهة، تمت إضافة ما يقرب من 400000 لقاح إلى البيانات بعد التحديث اليومي الصباحي المعتاد في 7 أبريل 2021. تمثل هذه الجرعات عددًا من السجلات التي قام بتصحيحها مقدمو الخدمة ولكن لم يتم احتسابها مسبقًا في الفترة ما بين 11 مارس 2021 و6 أبريل 2021. وتتوفر تفاصيل عن هذه البيانات في <a class="hero-stats-footer-slink" href="/state-dashboard/">لوحة بيانات الولاية</a>.
+						وتتوفر تفاصيل عن هذه البيانات في <a class="hero-stats-footer-slink" href="/state-dashboard/">لوحة بيانات الولاية</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
