--- a/es/index.html
+++ b/es/index.html
@@ -257,7 +257,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						Como parte de una iniciativa de integridad y datos de vacunación en curso en todo el estado, se agregaron aproximadamente 400,000 vacunas a los datos después de la actualización diaria regular de la mañana del 7 de abril de 2021. Estas dosis representan una serie de registros que fueron corregidos por los proveedores, pero que no se contaron previamente entre el 11 de marzo de 2021 y el 6 de abril de 2021. Los detalles sobre estos datos están disponibles en el <a class="hero-stats-footer-slink" href="/state-dashboard/">panel del estado.</a>.
+						Los detalles sobre estos datos están disponibles en el <a class="hero-stats-footer-slink" href="/state-dashboard/">panel del estado.</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
