--- a/vi/index.html
+++ b/vi/index.html
@@ -259,7 +259,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						Là một phần của sáng kiến toàn vẹn và dữ liệu tiêm chủng đang tiến hành trên toàn tiểu bang, khoảng 400,000 liều vắc-xin đã được thêm vào dữ liệu sau khi cập nhật thường xuyên vào mỗi buổi sáng ngày 7 tháng 4 năm 2021. Những liều này biểu thị số hồ sơ đã được sửa chữa bởi nhà cung cấp nhưng trước đó chưa được thống kê từ ngày 11 tháng 3 năm 2021 đến ngày 6 tháng 4 năm 2021. Thông tin chi tiết về dữ liệu này hiện có tại <a class="hero-stats-footer-slink" href="/state-dashboard/">bảng tổng kết tiểu bang</a>.
+						Thông tin chi tiết về dữ liệu này hiện có tại <a class="hero-stats-footer-slink" href="/state-dashboard/">bảng tổng kết tiểu bang</a>.
 					</div>
 						
 					<div class="hero-stats-footer">
