--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;April 9, 2021 at 11:52 AM</p>
+            <p class="small-text">最近更新&nbsp;April 9, 2021 at 12:32 PM</p>
           
         </div>
       </div>
