Update page - food-resources.html 0038b41f6b1d02be2d162dcd10c36b5c29bbac6a

--- a/food-resources/index.html
+++ b/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Food and food assistance</h1>
           
-            <p class="small-text">Last updated&nbsp;April 2, 2021 at 4:41 PM</p>
+            <p class="small-text">Last updated&nbsp;April 9, 2021 at 1:25 PM</p>
           
         </div>
       </div>
@@ -165,11 +165,15 @@
 
 
 
-<ul class="toc"><li><a href="https://covid19.ca.gov/food-resources/#emergency-food"><strong>Emergency food and food benefits</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#families-with-school-aged-children"><strong>Families with school-aged children</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#older-adults"><strong>Older adults</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#grocery-delivery-options"><strong>Grocery delivery options</strong></a></li><li><a href="https://covid19.ca.gov/food-resources/#how-you-can-help"><strong>How you can help</strong></a></li></ul>
+<ul class="toc"><li><a href="#emergency-food"><strong>Emergency food and food benefits</strong></a></li><li><a href="#families-with-school-aged-children"><strong>Families with school-aged children</strong></a></li><li><a href="#older-adults"><strong>Older adults</strong></a></li><li><a href="#grocery-delivery-options"><strong>Grocery delivery options</strong></a></li><li><a href="#how-you-can-help"><strong>How you can help</strong></a></li></ul>
 
 
 
-<h2 id="emergency-food">Emergency food and food benefits</h2>
+<hr class="wp-block-separator" id="emergency-food"/>
+
+
+
+<h2>Emergency food and food benefits</h2>
 
 
 
@@ -237,7 +241,11 @@
 
 
 
-<h2 id="families-with-school-aged-children">Families with school-aged children</h2>
+<hr class="wp-block-separator" id="families-with-school-aged-children"/>
+
+
+
+<h2>Families with school-aged children</h2>
 
 
 
@@ -277,7 +285,11 @@
 
 
 
-<h2 id="older-adults">Older adults</h2>
+<hr class="wp-block-separator" id="older-adults"/>
+
+
+
+<h2>Older adults</h2>
 
 
 
@@ -385,7 +397,11 @@
 
 
 
-<h2 id="grocery-delivery-options">Grocery delivery options</h2>
+<hr class="wp-block-separator" id="grocery-delivery-options"/>
+
+
+
+<h2>Grocery delivery options</h2>
 
 
 
@@ -425,7 +441,11 @@
 
 
 
-<h2 id="how-you-can-help">How you can help</h2>
+<hr class="wp-block-separator" id="how-you-can-help"/>
+
+
+
+<h2>How you can help</h2>
 
 
 
