Update translation - 105855560 (#4065) 8e843367cfd3983d786586f67888c499e619dff1

--- a/ar/food-resources/index.html
+++ b/ar/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الطعام والمساعدات الغذائية</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;4:41 م الساعة 2 أبريل 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:56 م الساعة 9 أبريل 2021</p>
           
         </div>
       </div>
@@ -165,11 +165,7 @@
 
 
 
-<ul class="toc"><li><a href="/ar/food-resources/#emergency-food"><strong>أغذية الطوارئ والمساعدات الغذائية</strong></a></li><li><a href="/ar/food-resources/#families-with-school-aged-children"><strong>العائلات التي لديها أطفال في سن المدرسة</strong></a></li><li><a href="/ar/food-resources/#older-adults"><strong>البالغون الأكبر سنًا</strong></a></li><li><a href="/ar/food-resources/#grocery-delivery-options"><strong>خيارات توصيل البقالة</strong></a></li><li><a href="/ar/food-resources/#how-you-can-help"><strong>كيف يمكنك تقديم المساعدة</strong></a></li></ul>
-
-
-
-<h2 id="emergency-food">أغذية الطوارئ والمساعدات الغذائية</h2>
+<ul class="toc"><li><a href="#emergency-food"><strong>أغذية الطوارئ والمساعدات الغذائية</strong></a></li><li><a href="#families-with-school-aged-children"><strong>العائلات التي لديها أطفال في سن المدرسة</strong></a></li><li><a href="#older-adults"><strong>البالغون الأكبر سنًا</strong></a></li><li><a href="#grocery-delivery-options"><strong>خيارات توصيل البقالة</strong></a></li><li><a href="#how-you-can-help"><strong>كيف يمكنك تقديم المساعدة</strong></a></li></ul>    <hr class="wp-block-separator" id="emergency-food"/>    <h2>أغذية الطوارئ والمساعدات الغذائية</h2>
 
 
 
@@ -233,11 +229,7 @@
 
 
 
-<p>إن مواقع WIC تعتمد إجراءات تمنحك مزايا WIC بسرعة، حتى وهي مغلقة أمام الجمهور. يرجى الاتصال قبل الزيارة.</p>
-
-
-
-<h2 id="families-with-school-aged-children">العائلات التي لديها أطفال في سن المدرسة</h2>
+<p>إن مواقع WIC تعتمد إجراءات تمنحك مزايا WIC بسرعة، حتى وهي مغلقة أمام الجمهور. يرجى الاتصال قبل الزيارة.</p>    <hr class="wp-block-separator" id="families-with-school-aged-children"/>    <h2>العائلات التي لديها أطفال في سن المدرسة</h2>
 
 
 
@@ -273,11 +265,7 @@
 
 
 
-<p>يوفر تمديد P-EBT مزايا ومساعدات لشهري أغسطس وسبتمبر 2020. وحتى من 22 ديسمبر 2020، تم إرسال جميع بطاقات تمديد P-EBT عبر البريد الإلكتروني إلى العائلات التي لديها أطفال مؤهلون. راجع <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">الأسئلة المتكررة عن تمديد P-EBT</a> لتحصل على مزيد من التفاصيل.</p>
-
-
-
-<h2 id="older-adults">البالغون الأكبر سنًا</h2>
+<p>يوفر تمديد P-EBT مزايا ومساعدات لشهري أغسطس وسبتمبر 2020. وحتى من 22 ديسمبر 2020، تم إرسال جميع بطاقات تمديد P-EBT عبر البريد الإلكتروني إلى العائلات التي لديها أطفال مؤهلون. راجع <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">الأسئلة المتكررة عن تمديد P-EBT</a> لتحصل على مزيد من التفاصيل.</p>    <hr class="wp-block-separator" id="older-adults"/>    <h2>البالغون الأكبر سنًا</h2>
 
 
 
@@ -381,11 +369,7 @@
 
 
 
-<p>يمكنك التحدث إلى موظف GoGoGrandparent على مدار الساعة طوال أيام الأسبوع على الرقم <a href="tel:1-855-464-6872">‎1-855-464-6872</a>.</p>
-
-
-
-<h2 id="grocery-delivery-options">خيارات توصيل منتجات البقالة</h2>
+<p>يمكنك التحدث إلى موظف GoGoGrandparent على مدار الساعة طوال أيام الأسبوع على الرقم <a href="tel:1-855-464-6872">‎1-855-464-6872</a>.</p>    <hr class="wp-block-separator" id="grocery-delivery-options"/>    <h2>خيارات توصيل منتجات البقالة</h2>
 
 
 
@@ -421,11 +405,7 @@
 
 
 
-<p>كما تتوفر لدى تجار التجزئة الآخرين ومحلات البقالة خيارات توصيل. يرجى التحقق من محلك المفضل لمعرفة ما إذا كانت خدمة التوصيل متوفرة لديه أم لا.</p>
-
-
-
-<h2 id="how-you-can-help">كيف يمكنك تقديم المساعدة</h2>
+<p>كما تتوفر لدى تجار التجزئة الآخرين ومحلات البقالة خيارات توصيل. يرجى التحقق من محلك المفضل لمعرفة ما إذا كانت خدمة التوصيل متوفرة لديه أم لا.</p>    <hr class="wp-block-separator" id="how-you-can-help"/>    <h2>كيف يمكنك تقديم المساعدة</h2>
 
 
 
