--- a/es/food-resources/index.html
+++ b/es/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Comida y asistencia alimentaria</h1>
           
-            <p class="small-text">Última actualización&nbsp;2 de abril de 2021 a las 4:41 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;9 de abril de 2021 a las 1:56 p. m.</p>
           
         </div>
       </div>
@@ -165,11 +165,7 @@
 
 
 
-<ul class="toc"><li><a href="/es/food-resources/#emergency-food"><strong>alimentos de emergencia y beneficios de alimentos</strong></a></li><li><a href="/es/food-resources/#families-with-school-aged-children"><strong>familias con hijos en edad escolar</strong></a></li><li><a href="/es/food-resources/#older-adults"><strong>adultos mayores </strong></a></li><li><a href="/es/food-resources/#grocery-delivery-options"><strong>opciones de entrega de comestibles</strong></a></li><li><a href="/es/food-resources/#how-you-can-help"><strong>cómo puede usted ayudar</strong></a></li></ul>
-
-
-
-<h2 id="emergency-food">Alimentos de emergencia y beneficios de alimentos</h2>
+<ul class="toc"><li><a href="#emergency-food"><strong>alimentos de emergencia y beneficios de alimentos</strong></a></li><li><a href="#families-with-school-aged-children"><strong>familias con hijos en edad escolar</strong></a></li><li><a href="#older-adults"><strong>adultos mayores </strong></a></li><li><a href="#grocery-delivery-options"><strong>opciones de entrega de comestibles</strong></a></li><li><a href="#how-you-can-help"><strong>cómo puede usted ayudar</strong></a></li></ul>    <hr class="wp-block-separator" id="emergency-food"/>    <h2>Alimentos de emergencia y beneficios de alimentos</h2>
 
 
 
@@ -233,11 +229,7 @@
 
 
 
-<p>Las ubicaciones de WIC tienen procedimientos para obtener sus beneficios de WIC rápidamente, incluso cuando están cerradas al público. Llame antes de ir.</p>
-
-
-
-<h2 id="families-with-school-aged-children">Familias con hijos en edad escolar</h2>
+<p>Las ubicaciones de WIC tienen procedimientos para obtener sus beneficios de WIC rápidamente, incluso cuando están cerradas al público. Llame antes de ir.</p>    <hr class="wp-block-separator" id="families-with-school-aged-children"/>    <h2>Familias con hijos en edad escolar</h2>
 
 
 
@@ -273,11 +265,7 @@
 
 
 
-<p>La prórroga de P-EBT brindó beneficios para los meses de agosto y septiembre de 2020. Al 22 de diciembre de 2020, todas las tarjetas de prórroga de P-EBT se enviaron por correo a las familias con niños elegibles. Consulte las <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">preguntas frecuentes sobre la prórroga de P-EBT</a> para obtener más detalles.</p>
-
-
-
-<h2 id="older-adults">Adultos mayores</h2>
+<p>La prórroga de P-EBT brindó beneficios para los meses de agosto y septiembre de 2020. Al 22 de diciembre de 2020, todas las tarjetas de prórroga de P-EBT se enviaron por correo a las familias con niños elegibles. Consulte las <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">preguntas frecuentes sobre la prórroga de P-EBT</a> para obtener más detalles.</p>    <hr class="wp-block-separator" id="older-adults"/>    <h2>Adultos mayores</h2>
 
 
 
@@ -381,11 +369,7 @@
 
 
 
-<p>Puede hablar con un operador de GoGoGrandparent las 24 horas del día, los 7 días de la semana al <a href="tel:1-855-464-6872">1-855-464-6872</a>.</p>
-
-
-
-<h2 id="grocery-delivery-options">Opciones de entrega de comestibles</h2>
+<p>Puede hablar con un operador de GoGoGrandparent las 24 horas del día, los 7 días de la semana al <a href="tel:1-855-464-6872">1-855-464-6872</a>.</p>    <hr class="wp-block-separator" id="grocery-delivery-options"/>    <h2>Opciones de entrega de comestibles</h2>
 
 
 
@@ -421,11 +405,7 @@
 
 
 
-<p>Muchos otros minoristas y tiendas de comestibles tienen opciones de entrega. Verifique con su tienda preferida para saber si hacen entregas a domicilio.</p>
-
-
-
-<h2 id="how-you-can-help">Cómo puede usted ayudar</h2>
+<p>Muchos otros minoristas y tiendas de comestibles tienen opciones de entrega. Verifique con su tienda preferida para saber si hacen entregas a domicilio.</p>    <hr class="wp-block-separator" id="how-you-can-help"/>    <h2>Cómo puede usted ayudar</h2>
 
 
 
