--- a/tl/food-resources/index.html
+++ b/tl/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pagkain at tulong sa pagkain</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Abril 2, 2021 sa 4:41 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Abril 9, 2021 sa 1:56 PM</p>
           
         </div>
       </div>
@@ -165,11 +165,7 @@
 
 
 
-<ul class="toc"><li><a href="/tl/food-resources/#emergency-food"><strong>Pagkain sa emergency at mga benepisyo sa pagkain</strong></a></li><li><a href="/tl/food-resources/#families-with-school-aged-children"><strong>Mga pamilyang may mga batang nag-aaral pa</strong></a></li><li><a href="/tl/food-resources/#older-adults"><strong>Mga nakakatandang nasa hustong gulang </strong></a></li><li><a href="/tl/food-resources/#grocery-delivery-options"><strong>Mga opsyon sa pag-deliver ng grocery</strong></a></li><li><a href="/tl/food-resources/#how-you-can-help"><strong>Paano ka makakatulong</strong></a></li></ul>
-
-
-
-<h2 id="emergency-food">Pagkain sa emergency at mga benepisyo sa pagkain</h2>
+<ul class="toc"><li><a href="#emergency-food"><strong>Pagkain sa emergency at mga benepisyo sa pagkain</strong></a></li><li><a href="#families-with-school-aged-children"><strong>Mga pamilyang may mga batang nag-aaral pa</strong></a></li><li><a href="#older-adults"><strong>Mga nakakatandang nasa hustong gulang </strong></a></li><li><a href="#grocery-delivery-options"><strong>Mga opsyon sa pag-deliver ng grocery</strong></a></li><li><a href="#how-you-can-help"><strong>Paano ka makakatulong</strong></a></li></ul>    <hr class="wp-block-separator" id="emergency-food"/>    <h2>Pagkain sa emergency at mga benepisyo sa pagkain</h2>
 
 
 
@@ -233,11 +229,7 @@
 
 
 
-<p>Ang mga lokasyon ng WIC ay may mga pamamaraan para mabilisan kang mabigyan ng mga benepisyo sa WIC, kahit na sarado ang mga ito sa publiko. Tumawag muna bago pumunta.</p>
-
-
-
-<h2 id="families-with-school-aged-children">Mga pamilyang may mga batang nag-aaral pa</h2>
+<p>Ang mga lokasyon ng WIC ay may mga pamamaraan para mabilisan kang mabigyan ng mga benepisyo sa WIC, kahit na sarado ang mga ito sa publiko. Tumawag muna bago pumunta.</p>    <hr class="wp-block-separator" id="families-with-school-aged-children"/>    <h2>Mga pamilyang may mga batang nag-aaral pa</h2>
 
 
 
@@ -273,11 +265,7 @@
 
 
 
-<p>Nagbibigay ang extension ng P-EBT ng mga benepisyo para sa buwan ng Agosto at Setyembre 2020. Noong Disyembre 22, 2020, naipadala na ang lahat ng extension card ng P-EBT sa mga pamilyang may mga kwalipikadong anak. Tingnan ang <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">mga madalas itanong tungkol sa Extension ng P-EBT</a> para sa mga detalye.</p>
-
-
-
-<h2 id="older-adults">Mga nakakatandang nasa hustong gulang</h2>
+<p>Nagbibigay ang extension ng P-EBT ng mga benepisyo para sa buwan ng Agosto at Setyembre 2020. Noong Disyembre 22, 2020, naipadala na ang lahat ng extension card ng P-EBT sa mga pamilyang may mga kwalipikadong anak. Tingnan ang <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">mga madalas itanong tungkol sa Extension ng P-EBT</a> para sa mga detalye.</p>    <hr class="wp-block-separator" id="older-adults"/>    <h2>Mga nakakatandang nasa hustong gulang</h2>
 
 
 
@@ -381,11 +369,7 @@
 
 
 
-<p>Puwede kang makipag-usap sa isang operator ng GoGoGrandparent nang 24/7 sa <a href="tel:1-855-464-6872">1-855-464-6872</a>.</p>
-
-
-
-<h2 id="grocery-delivery-options">Mga opsyon sa pag-deliver ng grocery</h2>
+<p>Puwede kang makipag-usap sa isang operator ng GoGoGrandparent nang 24/7 sa <a href="tel:1-855-464-6872">1-855-464-6872</a>.</p>    <hr class="wp-block-separator" id="grocery-delivery-options"/>    <h2>Mga opsyon sa pag-deliver ng grocery</h2>
 
 
 
@@ -421,11 +405,7 @@
 
 
 
-<p>Maraming iba pang retailer at tindahan ng grocery ang may mga opsyon sa pag-deliver. Alamin sa iyong gustong tindahan kung nagde-deliver sila.</p>
-
-
-
-<h2 id="how-you-can-help">Paano ka makakatulong</h2>
+<p>Maraming iba pang retailer at tindahan ng grocery ang may mga opsyon sa pag-deliver. Alamin sa iyong gustong tindahan kung nagde-deliver sila.</p>    <hr class="wp-block-separator" id="how-you-can-help"/>    <h2>Paano ka makakatulong</h2>
 
 
 
