--- a/vi/food-resources/index.html
+++ b/vi/food-resources/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Thực phẩm và hỗ trợ thực phẩm</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;2 tháng 4, 2021 lúc 16:41</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;9 tháng 4, 2021 lúc 13:56</p>
           
         </div>
       </div>
@@ -167,11 +167,7 @@
 
 
 
-<ul class="toc"><li><a href="/vi/food-resources/#emergency-food"><strong>Thực phẩm khẩn cấp và trợ cấp thực phẩm</strong></a></li><li><a href="/vi/food-resources/#families-with-school-aged-children"><strong>Các gia đình có con em ở độ tuổi đến trường</strong></a></li><li><a href="/vi/food-resources/#older-adults"><strong>Người già </strong></a></li><li><a href="/vi/food-resources/#grocery-delivery-options"><strong>Tùy chọn giao hàng tạp hóa</strong></a></li><li><a href="/vi/food-resources/#how-you-can-help"><strong>Quý vị có thể làm gì để giúp đỡ</strong></a></li></ul>
-
-
-
-<h2 id="emergency-food">Thực phẩm khẩn cấp và trợ cấp thực phẩm</h2>
+<ul class="toc"><li><a href="#emergency-food"><strong>Thực phẩm khẩn cấp và trợ cấp thực phẩm</strong></a></li><li><a href="#families-with-school-aged-children"><strong>Các gia đình có con em ở độ tuổi đến trường</strong></a></li><li><a href="#older-adults"><strong>Người già </strong></a></li><li><a href="#grocery-delivery-options"><strong>Tùy chọn giao hàng tạp hóa</strong></a></li><li><a href="#how-you-can-help"><strong>Quý vị có thể làm gì để giúp đỡ</strong></a></li></ul>    <hr class="wp-block-separator" id="emergency-food"/>    <h2>Thực phẩm khẩn cấp và trợ cấp thực phẩm</h2>
 
 
 
@@ -235,11 +231,7 @@
 
 
 
-<p>Các địa điểm của WIC có các quy trình giúp quý vị nhanh chóng nhận được các khoản trợ cấp WIC, ngay cả khi không được mở cửa cho công chúng. Vui lòng gọi điện trước khi đến.</p>
-
-
-
-<h2 id="families-with-school-aged-children">Các gia đình có con em ở độ tuổi đến trường</h2>
+<p>Các địa điểm của WIC có các quy trình giúp quý vị nhanh chóng nhận được các khoản trợ cấp WIC, ngay cả khi không được mở cửa cho công chúng. Vui lòng gọi điện trước khi đến.</p>    <hr class="wp-block-separator" id="families-with-school-aged-children"/>    <h2>Các gia đình có con em ở độ tuổi đến trường</h2>
 
 
 
@@ -275,11 +267,7 @@
 
 
 
-<p>Chương trình gia hạn P-EBT cung cấp các khoản trợ cấp cho các tháng 8 và 9 năm 2020. Kể từ ngày 22 tháng 12 năm 2020, tất cả các thẻ gia hạn P-EBT đã được gửi đến các gia đình có con em đủ điều kiện tham gia qua đường bưu điện. Hãy xem <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">các câu hỏi thường gặp về Chương Trình Gia Hạn P-EBT</a> để biết thông tin chi tiết.</p>
-
-
-
-<h2 id="older-adults">Người già</h2>
+<p>Chương trình gia hạn P-EBT cung cấp các khoản trợ cấp cho các tháng 8 và 9 năm 2020. Kể từ ngày 22 tháng 12 năm 2020, tất cả các thẻ gia hạn P-EBT đã được gửi đến các gia đình có con em đủ điều kiện tham gia qua đường bưu điện. Hãy xem <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">các câu hỏi thường gặp về Chương Trình Gia Hạn P-EBT</a> để biết thông tin chi tiết.</p>    <hr class="wp-block-separator" id="older-adults"/>    <h2>Người già</h2>
 
 
 
@@ -383,11 +371,7 @@
 
 
 
-<p>Quý vị có thể trao đổi với tổng đài viên của GoGoGrandparent 24/7 theo số <a href="tel:1-855-464-6872">1-855-464-6872</a>.</p>
-
-
-
-<h2 id="grocery-delivery-options">Tùy chọn giao hàng tạp hóa</h2>
+<p>Quý vị có thể trao đổi với tổng đài viên của GoGoGrandparent 24/7 theo số <a href="tel:1-855-464-6872">1-855-464-6872</a>.</p>    <hr class="wp-block-separator" id="grocery-delivery-options"/>    <h2>Tùy chọn giao hàng tạp hóa</h2>
 
 
 
@@ -423,11 +407,7 @@
 
 
 
-<p>Nhiều nhà bán lẻ khác và các cửa hàng tạp hóa có các tùy chọn giao hàng. Vui lòng kiểm tra với cửa hàng yêu thích của quý vị để biết được họ có dịch vụ giao hàng không.</p>
-
-
-
-<h2 id="how-you-can-help">Quý vị có thể làm gì để giúp đỡ</h2>
+<p>Nhiều nhà bán lẻ khác và các cửa hàng tạp hóa có các tùy chọn giao hàng. Vui lòng kiểm tra với cửa hàng yêu thích của quý vị để biết được họ có dịch vụ giao hàng không.</p>    <hr class="wp-block-separator" id="how-you-can-help"/>    <h2>Quý vị có thể làm gì để giúp đỡ</h2>
 
 
 
