--- a/zh-hans/food-resources/index.html
+++ b/zh-hans/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>食品及食物援助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年4月2日, 下午4:41</p>
+            <p class="small-text">最后更新时间&nbsp;2021年4月9日, 下午1:56</p>
           
         </div>
       </div>
@@ -165,11 +165,7 @@
 
 
 
-<ul class="toc"><li><a href="/zh-hans/food-resources/#emergency-food"><strong>应急食品和食品福利</strong></a></li><li><a href="/zh-hans/food-resources/#families-with-school-aged-children"><strong>有学龄儿童的家庭</strong></a></li><li><a href="/zh-hans/food-resources/#older-adults"><strong>年长者 </strong></a></li><li><a href="/zh-hans/food-resources/#grocery-delivery-options"><strong>杂货配送选项</strong></a></li><li><a href="/zh-hans/food-resources/#how-you-can-help"><strong>您如何提供帮助</strong></a></li></ul>
-
-
-
-<h2 id="emergency-food">应急食品和食品福利</h2>
+<ul class="toc"><li><a href="#emergency-food"><strong>应急食品和食品福利</strong></a></li><li><a href="#families-with-school-aged-children"><strong>有学龄儿童的家庭</strong></a></li><li><a href="#older-adults"><strong>年长者 </strong></a></li><li><a href="#grocery-delivery-options"><strong>杂货配送选项</strong></a></li><li><a href="#how-you-can-help"><strong>您如何提供帮助</strong></a></li></ul>    <hr class="wp-block-separator" id="emergency-food"/>    <h2>应急食品和食品福利</h2>
 
 
 
@@ -233,11 +229,7 @@
 
 
 
-<p>WIC办事处设有可以让您快速获取WIC福利的程序（即使不对公众开放）。请在造访前先行致电。</p>
-
-
-
-<h2 id="families-with-school-aged-children">有学龄儿童的家庭</h2>
+<p>WIC办事处设有可以让您快速获取WIC福利的程序（即使不对公众开放）。请在造访前先行致电。</p>    <hr class="wp-block-separator" id="families-with-school-aged-children"/>    <h2>有学龄儿童的家庭</h2>
 
 
 
@@ -273,11 +265,7 @@
 
 
 
-<p>P-EBT延期提供2020年8月和9月的福利金。截至2020年12月22日，所有P-EBT延期卡已邮寄给有符合资格的儿童的家庭。详情请参阅<a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">有关P-EBT延期的常见问题与解答</a>。</p>
-
-
-
-<h2 id="older-adults">年长者</h2>
+<p>P-EBT延期提供2020年8月和9月的福利金。截至2020年12月22日，所有P-EBT延期卡已邮寄给有符合资格的儿童的家庭。详情请参阅<a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">有关P-EBT延期的常见问题与解答</a>。</p>    <hr class="wp-block-separator" id="older-adults"/>    <h2>年长者</h2>
 
 
 
@@ -381,11 +369,7 @@
 
 
 
-<p>您可以随时致电<a href="tel:1-855-464-6872">1-855-464-6872</a>与GoGoGrandparent接线员进行交谈。</p>
-
-
-
-<h2 id="grocery-delivery-options">杂货配送选项</h2>
+<p>您可以随时致电<a href="tel:1-855-464-6872">1-855-464-6872</a>与GoGoGrandparent接线员进行交谈。</p>    <hr class="wp-block-separator" id="grocery-delivery-options"/>    <h2>杂货配送选项</h2>
 
 
 
@@ -421,11 +405,7 @@
 
 
 
-<p>许多其他零售商和杂货店都提供送货服务。请咨询您喜欢的商家，以了解其是否提供送货服务。</p>
-
-
-
-<h2 id="how-you-can-help">您如何提供帮助</h2>
+<p>许多其他零售商和杂货店都提供送货服务。请咨询您喜欢的商家，以了解其是否提供送货服务。</p>    <hr class="wp-block-separator" id="how-you-can-help"/>    <h2>您如何提供帮助</h2>
 
 
 
