--- a/zh-hant/food-resources/index.html
+++ b/zh-hant/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>食品及食物援助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年4月2日, 下午4:41</p>
+            <p class="small-text">最近更新&nbsp;2021年4月9日, 下午1:56</p>
           
         </div>
       </div>
@@ -165,11 +165,7 @@
 
 
 
-<ul class="toc"><li><a href="/zh-hant/food-resources/#emergency-food"><strong>應急食品和食品福利</strong></a></li><li><a href="/zh-hant/food-resources/#families-with-school-aged-children"><strong>有學齡兒童的家庭</strong></a></li><li><a href="/zh-hant/food-resources/#older-adults"><strong>年長者</strong></a></li><li><a href="/zh-hant/food-resources/#grocery-delivery-options"><strong>雜貨配送選項</strong></a></li><li><a href="/zh-hant/food-resources/#how-you-can-help"><strong>您如何提供幫助</strong></a></li></ul>
-
-
-
-<h2 id="emergency-food">應急食品和食品福利</h2>
+<ul class="toc"><li><a href="#emergency-food"><strong>應急食品和食品福利</strong></a></li><li><a href="#families-with-school-aged-children"><strong>有學齡兒童的家庭</strong></a></li><li><a href="#older-adults"><strong>年長者</strong></a></li><li><a href="#grocery-delivery-options"><strong>雜貨配送選項</strong></a></li><li><a href="#how-you-can-help"><strong>您如何提供幫助</strong></a></li></ul>    <hr class="wp-block-separator" id="emergency-food"/>    <h2>應急食品和食品福利</h2>
 
 
 
@@ -233,11 +229,7 @@
 
 
 
-<p>WIC辦事處設有可以讓您快速獲取WIC福利的程序（即使不對公眾開放）。請在造訪前先行致電。</p>
-
-
-
-<h2 id="families-with-school-aged-children">有學齡兒童的家庭</h2>
+<p>WIC辦事處設有可以讓您快速獲取WIC福利的程序（即使不對公眾開放）。請在造訪前先行致電。</p>    <hr class="wp-block-separator" id="families-with-school-aged-children"/>    <h2>有學齡兒童的家庭</h2>
 
 
 
@@ -273,11 +265,7 @@
 
 
 
-<p>P-EBT延期提供2020年8月和9月的福利金。截至2020年12月22日，所有P-EBT延期卡已寄給有符合資格的兒童的家庭。詳情請參閱<a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">有關P-EBT延期的常見問題與解答</a>。</p>
-
-
-
-<h2 id="older-adults">年長者</h2>
+<p>P-EBT延期提供2020年8月和9月的福利金。截至2020年12月22日，所有P-EBT延期卡已寄給有符合資格的兒童的家庭。詳情請參閱<a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">有關P-EBT延期的常見問題與解答</a>。</p>    <hr class="wp-block-separator" id="older-adults"/>    <h2>年長者</h2>
 
 
 
@@ -381,11 +369,7 @@
 
 
 
-<p>您可以隨時致電<a href="tel:1-855-464-6872">1-855-464-6872</a>與GoGoGrandparent接線員進行交談。</p>
-
-
-
-<h2 id="grocery-delivery-options">雜貨配送選項</h2>
+<p>您可以隨時致電<a href="tel:1-855-464-6872">1-855-464-6872</a>與GoGoGrandparent接線員進行交談。</p>    <hr class="wp-block-separator" id="grocery-delivery-options"/>    <h2>雜貨配送選項</h2>
 
 
 
@@ -421,11 +405,7 @@
 
 
 
-<p>許多其他零售商和雜貨店都提供送貨服務。請諮詢您喜歡的商家，以了解其是否提供送貨服務。</p>
-
-
-
-<h2 id="how-you-can-help">您如何提供幫助</h2>
+<p>許多其他零售商和雜貨店都提供送貨服務。請諮詢您喜歡的商家，以了解其是否提供送貨服務。</p>    <hr class="wp-block-separator" id="how-you-can-help"/>    <h2>您如何提供幫助</h2>
 
 
 
