--- a/ko/food-resources/index.html
+++ b/ko/food-resources/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>식품 및 식품 지원</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 2일 오후 4:41</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 4월 9일 오후 1:56</p>
           
         </div>
       </div>
@@ -165,11 +165,7 @@
 
 
 
-<ul class="toc"><li><a href="/ko/food-resources/#emergency-food"><strong>긴급 식품 및 식품 혜택</strong></a></li><li><a href="/ko/food-resources/#families-with-school-aged-children"><strong>학령기 자녀를 둔 가족</strong></a></li><li><a href="/ko/food-resources/#older-adults"><strong>노인 </strong></a></li><li><a href="/ko/food-resources/#grocery-delivery-options"><strong>식료품 배달 옵션</strong></a></li><li><a href="/ko/food-resources/#how-you-can-help"><strong>도움 제공 방법</strong></a></li></ul>
-
-
-
-<h2 id="emergency-food">긴급 식품 및 식품 혜택</h2>
+<ul class="toc"><li><a href="#emergency-food"><strong>긴급 식품 및 식품 혜택</strong></a></li><li><a href="#families-with-school-aged-children"><strong>학령기 자녀를 둔 가족</strong></a></li><li><a href="#older-adults"><strong>노인 </strong></a></li><li><a href="#grocery-delivery-options"><strong>식료품 배달 옵션</strong></a></li><li><a href="#how-you-can-help"><strong>도움 제공 방법</strong></a></li></ul>    <hr class="wp-block-separator" id="emergency-food"/>    <h2>긴급 식품 및 식품 혜택</h2>
 
 
 
@@ -233,11 +229,7 @@
 
 
 
-<p>WIC 사무소는 일반인에게 폐쇄된 경우에도 WIC 혜택을 신속하게 제공하기 위한 절차를 마련하고 있습니다. 방문 전에 전화하십시오.</p>
-
-
-
-<h2 id="families-with-school-aged-children">학령기 자녀를 둔 가족</h2>
+<p>WIC 사무소는 일반인에게 폐쇄된 경우에도 WIC 혜택을 신속하게 제공하기 위한 절차를 마련하고 있습니다. 방문 전에 전화하십시오.</p>    <hr class="wp-block-separator" id="families-with-school-aged-children"/>    <h2>학령기 자녀를 둔 가족</h2>
 
 
 
@@ -273,11 +265,7 @@
 
 
 
-<p>P-EBT 연장을 통해 2020년 8월과 9월에 대한 혜택을 제공합니다. 2020년 12월 22일 자로 전체 P-EBT 연장 카드가 대상 자격에 해당하는 자녀가 있는 가족에게 우송되었습니다. 더 자세한 사항은 <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">P-EBT 연자에 관해 자주 묻는 질문</a>에서 확인하십시오.</p>
-
-
-
-<h2 id="older-adults">노인</h2>
+<p>P-EBT 연장을 통해 2020년 8월과 9월에 대한 혜택을 제공합니다. 2020년 12월 22일 자로 전체 P-EBT 연장 카드가 대상 자격에 해당하는 자녀가 있는 가족에게 우송되었습니다. 더 자세한 사항은 <a href="https://www.cdss.ca.gov/Portals/9/EBT/Pandemic/P-EBT%20Extension%20FAQ.pdf">P-EBT 연자에 관해 자주 묻는 질문</a>에서 확인하십시오.</p>    <hr class="wp-block-separator" id="older-adults"/>    <h2>노인</h2>
 
 
 
@@ -381,11 +369,7 @@
 
 
 
-<p>하루 24시간 연중무휴로 운영되는 GoGoGrandparent 상담원에게 <a href="tel:1-855-464-6872">1-855-464-6872</a>로 문의할 수 있습니다.</p>
-
-
-
-<h2 id="grocery-delivery-options">식료품 배달 옵션</h2>
+<p>하루 24시간 연중무휴로 운영되는 GoGoGrandparent 상담원에게 <a href="tel:1-855-464-6872">1-855-464-6872</a>로 문의할 수 있습니다.</p>    <hr class="wp-block-separator" id="grocery-delivery-options"/>    <h2>식료품 배달 옵션</h2>
 
 
 
@@ -421,11 +405,7 @@
 
 
 
-<p>여러 다른 소매점 및 식료품점은 배달 옵션을 제공합니다. 원하는 매장에 문의하여 배송 여부를 확인하십시오.</p>
-
-
-
-<h2 id="how-you-can-help">도움 제공 방법</h2>
+<p>여러 다른 소매점 및 식료품점은 배달 옵션을 제공합니다. 원하는 매장에 문의하여 배송 여부를 확인하십시오.</p>    <hr class="wp-block-separator" id="how-you-can-help"/>    <h2>도움 제공 방법</h2>
 
 
 
