Update page - hotel-rooms-for-california-healthcare-workers.html 91b38148f4748836dc3d5be6e3ce3bcb543fa948

--- a/hotel-rooms-for-california-healthcare-workers/index.html
+++ b/hotel-rooms-for-california-healthcare-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hotel rooms for California healthcare workers</h1>
           
-            <p class="small-text">Last updated&nbsp;April 2, 2021 at 3:45 PM</p>
+            <p class="small-text">Last updated&nbsp;April 9, 2021 at 5:44 PM</p>
           
         </div>
       </div>
@@ -221,11 +221,15 @@
 
 
 
-<p>To make a hotel reservation, contact your facility’s Point of Contact to request approval.&nbsp;</p>
+<p>You have two ways to make a hotel reservation:</p>
 
 
 
-<p>Reservation requests made directly to CalTravelStore will be on hold until your Point of Contact approves them. CalTravelStore can be reached at <a href="tel:877-454-8785">877-454-8785</a>.&nbsp;Do not share personal health information.</p>
+<ol><li>Contact your facility’s Point of Contact to request approval</li><li>Call <a href="tel:877-454-8785">877-454-8785</a> and select option #2. Your request will be on hold until your Point of Contact approves it.</li></ol>
+
+
+
+<p>Do not share your personal health information with anyone.</p>
 
 
 
@@ -257,7 +261,7 @@
 
 
 
-<ul><li>Verifying that workers are actively employed at their facility</li><li>Determining whether workers are eligible</li><li>Submitting and approving requests for hotel reservations through CalTravelStore</li><li>Other program-related matters</li></ul>
+<ul><li>Verifying that workers are actively employed at their facility</li><li>Determining whether workers are eligible</li><li>Submitting and approving requests for hotel reservations</li><li>Other program-related matters</li></ul>
 
 
 
